ultima actulizacion con errores en la autentificacion y conexion con la base